Fixed log storage to utilize a better process manager to prevent excessive logcat processes in all applications